// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessagePlanChannelTemplate should match snapshot for empty state (EMAIL) 1`] = `
<div>
  <div
    class="channel-template-outer"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        Email
      </h3>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="choose-template-link-EMAIL"
            href="/message-plans/choose-email-template"
          >
            Choose
            <span
              class="nhsuk-u-visually-hidden"
            >
              Email
            </span>
             
            template
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MessagePlanChannelTemplate should match snapshot for empty state (LETTER) 1`] = `
<div>
  <div
    class="channel-template-outer"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        Letter
      </h3>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="choose-template-link-LETTER"
            href="/message-plans/choose-standard-english-letter-template"
          >
            Choose
            <span
              class="nhsuk-u-visually-hidden"
            >
              Letter
            </span>
             
            template
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MessagePlanChannelTemplate should match snapshot for empty state (NHSAPP) 1`] = `
<div>
  <div
    class="channel-template-outer"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        NHS App
      </h3>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="choose-template-link-NHSAPP"
            href="/message-plans/choose-nhs-app-template"
          >
            Choose
            <span
              class="nhsuk-u-visually-hidden"
            >
              NHS App
            </span>
             
            template
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MessagePlanChannelTemplate should match snapshot for empty state (SMS) 1`] = `
<div>
  <div
    class="channel-template-outer"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        Text message (SMS)
      </h3>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="choose-template-link-SMS"
            href="/message-plans/choose-text-message-template"
          >
            Choose
            <span
              class="nhsuk-u-visually-hidden"
            >
              Text message (SMS)
            </span>
             
            template
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MessagePlanChannelTemplate should match snapshot for selected template state (EMAIL) 1`] = `
<div>
  <div
    class="channel-template-outer"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        Email
      </h3>
      <p
        class="nhsuk-u-margin-bottom-2"
        data-testid="template-name-EMAIL"
      >
        Covid 65+ reminder v1
      </p>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="change-template-link-EMAIL"
            href="/message-plans/choose-email-template"
          >
            Change
            <span
              class="nhsuk-u-visually-hidden"
            >
              Email
            </span>
             
            template
          </a>
        </li>
        <li>
          <button
            class="channel-template-link--remove nhsuk-link"
            data-testid="remove-template-link-EMAIL"
            type="button"
          >
            Remove
            <span
              class="nhsuk-u-visually-hidden"
            >
              Email
            </span>
             
            template
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MessagePlanChannelTemplate should match snapshot for selected template state (LETTER) 1`] = `
<div>
  <div
    class="channel-template-outer"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        Letter
      </h3>
      <p
        class="nhsuk-u-margin-bottom-2"
        data-testid="template-name-LETTER"
      >
        Covid 65+ reminder v1
      </p>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="change-template-link-LETTER"
            href="/message-plans/choose-standard-english-letter-template"
          >
            Change
            <span
              class="nhsuk-u-visually-hidden"
            >
              Letter
            </span>
             
            template
          </a>
        </li>
        <li>
          <button
            class="channel-template-link--remove nhsuk-link"
            data-testid="remove-template-link-LETTER"
            type="button"
          >
            Remove
            <span
              class="nhsuk-u-visually-hidden"
            >
              Letter
            </span>
             
            template
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MessagePlanChannelTemplate should match snapshot for selected template state (NHSAPP) 1`] = `
<div>
  <div
    class="channel-template-outer"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        NHS App
      </h3>
      <p
        class="nhsuk-u-margin-bottom-2"
        data-testid="template-name-NHSAPP"
      >
        Covid 65+ reminder v1
      </p>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="change-template-link-NHSAPP"
            href="/message-plans/choose-nhs-app-template"
          >
            Change
            <span
              class="nhsuk-u-visually-hidden"
            >
              NHS App
            </span>
             
            template
          </a>
        </li>
        <li>
          <button
            class="channel-template-link--remove nhsuk-link"
            data-testid="remove-template-link-NHSAPP"
            type="button"
          >
            Remove
            <span
              class="nhsuk-u-visually-hidden"
            >
              NHS App
            </span>
             
            template
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MessagePlanChannelTemplate should match snapshot for selected template state (SMS) 1`] = `
<div>
  <div
    class="channel-template-outer"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        Text message (SMS)
      </h3>
      <p
        class="nhsuk-u-margin-bottom-2"
        data-testid="template-name-SMS"
      >
        Covid 65+ reminder v1
      </p>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="change-template-link-SMS"
            href="/message-plans/choose-text-message-template"
          >
            Change
            <span
              class="nhsuk-u-visually-hidden"
            >
              Text message (SMS)
            </span>
             
            template
          </a>
        </li>
        <li>
          <button
            class="channel-template-link--remove nhsuk-link"
            data-testid="remove-template-link-SMS"
            type="button"
          >
            Remove
            <span
              class="nhsuk-u-visually-hidden"
            >
              Text message (SMS)
            </span>
             
            template
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
